Update .env (xampp)

--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -1,8 +1,8 @@
 PORT=3001
 DB_HOST=localhost
-DB_PORT=8889        
+DB_PORT=3306        
 DB_USER=root
-DB_PASSWORD=root    
+# DB_PASSWORD=root    
 DB_NAME=tt_ip_manager
 JWT_SECRET=secret123
 
